<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.livares.aadhaar.pac.ManageAddressActivity" >

    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin">
	    <Button
	        android:id="@+id/btn_update"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:text="Update Address"
	        android:layout_centerHorizontal="true" />

	    <TextView
	        android:id="@+id/lbl_error_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/btn_update"
	        android:layout_marginTop="16dp"
	        android:text="@string/name"
	        android:textSize="15sp"
	        android:visibility="invisible" />
    	<TextView
	        android:id="@+id/lbl_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/lbl_error_message"
	        android:layout_marginTop="16dp"
	        android:text="@string/name"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_name"
	        android:layout_below="@+id/lbl_name"
	        android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/lbl_building"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/in_name"
	        android:layout_marginTop="17dp"
	        android:text="@string/building"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_building"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_building"
	        android:layout_below="@+id/lbl_building"
	        android:textSize="15sp" />    
	    
	    <TextView
	        android:id="@+id/lbl_street"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_building"
	        android:text="@string/street"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_street"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_street"
	        android:layout_below="@+id/lbl_street"
	        android:textSize="15sp" />
	
	    <TextView
	        android:id="@+id/lbl_po_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_street"
	        android:text="@string/post_office"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_po_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_po_name"
	        android:layout_below="@+id/lbl_po_name"
	        android:textSize="15sp" />
	
	    <TextView
	        android:id="@+id/lbl_region"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_po_name"
	        android:text="@string/region"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_region"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_region"
	        android:layout_below="@+id/lbl_region"
	        android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/lbl_district"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_region"
	        android:text="@string/district"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_district"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_district"
	        android:layout_below="@+id/lbl_district"
	        android:textSize="15sp" />

	    <TextView
	        android:id="@+id/lbl_state"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_district"
	        android:text="@string/state"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_state"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_state"
	        android:layout_below="@+id/lbl_state"
	        android:textSize="15sp" />
	    
	    <TextView
	        android:id="@+id/lbl_pincode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="15dp"
	        android:layout_below="@+id/in_state"
	        android:text="@string/pincode"
	        android:textSize="15sp" />
	
	    <EditText
	        android:id="@+id/in_pincode"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lbl_pincode"
	        android:layout_below="@+id/lbl_pincode"
	        android:textSize="15sp" />
</RelativeLayout>
</ScrollView>