<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
      
	<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center" >
		
		<LinearLayout
		    android:id="@+id/login_form"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="3dp"
		    android:paddingLeft="21sp"
		    android:paddingRight="21sp" >
		    
		    <EditText
		        android:id="@+id/in_aadhaar_number"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:inputType="numberDecimal"
		        android:hint="@string/aadhaar_number_hint"
		        android:textColor="#fff"
		        android:maxLength="13" />
		
		    <EditText
		        android:id="@+id/in_otp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:hint="@string/enter_otp"
		        android:inputType="textPassword"
		        android:textColor="#fff" />

	    </LinearLayout>
	    <TextView
	       android:id="@+id/error_messages"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text=""
	       android:gravity="center_horizontal"
	       android:textSize="14sp"
	       android:layout_marginTop="5dp"
	       android:textColor="#F70D1A"
	       android:visibility="gone">
		</TextView>
    	<RelativeLayout
		    android:id="@+id/progress_indicator"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="5dp"
		    android:visibility="invisible" >
		        <TextView
		            android:id="@+id/progress_text"
		            android:layout_width="wrap_content"
		            android:layout_height="35dp"
		            android:paddingTop="8dp"
		            android:paddingBottom="8dp" 
		            android:textSize="14sp"
		            android:text="@string/please_wait"
		            android:textColor="#fff" />
		
		        <ProgressBar
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:layout_alignBottom="@+id/progress_text" />
		
		</RelativeLayout>
	<LinearLayout
	    android:id="@+id/below_login_form"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="15dp"
	    >

	    <Button
	        android:visibility="gone"
	        android:id="@+id/btn_send_otp"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/request_for_otp"
	        android:textSize="20sp"
	         android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
	        android:background="#666666"
	        android:textColor="#ffffff" />
	    <Button
	        android:visibility="gone"
	        android:id="@+id/btn_login"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:textSize="20sp"
	         android:layout_marginLeft="20dp"
        	android:layout_marginRight="20dp"
	        android:background="#666666"
	        android:textColor="#ffffff" />
	</LinearLayout>
	    
	</LinearLayout>
</ScrollView>
