<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.livares.aadhaar.pac.PermanentContactRegisterActivity">

       <ImageView
            android:id="@+id/barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/barcode_image"
            android:onClick="scanUsingQRCode"
            android:padding="20dp"
            android:src="@drawable/qrcode_gray" />
    <TextView
        android:id="@+id/lbl_aadhaar_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/barcode"
        android:text="@string/aadhaar_number_label"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/in_aadhaar_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aadhaar_number_hint"
        android:inputType="numberDecimal"
        android:layout_alignStart="@+id/lbl_aadhaar_number"
        android:layout_alignLeft="@+id/lbl_aadhaar_number"
        android:layout_below="@+id/lbl_aadhaar_number"
        android:layout_marginTop="16dp"
        android:maxLength="12"
        android:textSize="15sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lbl_this_is_address_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/in_aadhaar_number"
        android:text="@string/this_is_permanent_contact_code"
        android:textSize="16sp"
        android:visibility="invisible" />
    
    <TextView
        android:id="@+id/lbl_address_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:layout_below="@+id/lbl_this_is_address_code"
        android:text="XXXXXXXXXXXXX"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:visibility="invisible" />
    <TextView
        android:id="@+id/lbl_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/in_aadhaar_number"
        android:text=""
        android:textSize="16sp"
        android:visibility="invisible" />
            
	<Button
        android:id="@+id/auth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_overlay"
        android:onClick="authenticate"
        android:text="@string/title_activity_permanent_contact_register"
        android:textColor="#fff" />
	<Button
	    android:visibility="gone"
        android:id="@+id/btn_create_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black_overlay"
        android:text="Create Address"
        android:textColor="#fff" />
</RelativeLayout>